# FastAPI-practice

./: .gitignore  LICENSE  README.md  auto_gpt.py  check_location.py  db.py  db_base.py  env.py  env_sample.txt  gemini-cli.py  log.py  logging.conf  main.py  pyproject.toml  summary_prompt.txt
apis/: ml.py  todo.py  user.py
auth/: auth_handler.py
error/: exceptions.py  handlers.py
model/: __init__.py  todo.py  user.py
schemas/: todo.py  user.py
services/: ml.py  todo.py  user.py
utils/: converters.py
validators/: string.py  user.py
